--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ ignore = [
     "D",      # Docstring style rules
     "TD",     # Pedantic TODO comment rules
     "FIX002", # Line contains TODO rule
+    "FIX004", # Line contains HACK rule
     "S101",   # Disallow assert statements rule
     "TRY",    # Pedantic exception rules
     "EM",     # Pedantic exception message rules
@@ -121,7 +122,7 @@ parsing = ["tokenizer", "reynir", "islenska"]
 # Dev dependencies
 dev = [
     "pytest>=7.2.1",
-    "ruff>=0.0.274",
+    "ruff>=0.0.286",
     # Pre-commit hook
     "pre-commit",
     "black",
