--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,11 +114,10 @@ typehints = ["typing", "typing_extensions", "types", "collections.abc"]
 
 [tool.ruff.per-file-ignores]
 # Allow print statements in CLI interface
-"src/icespeak/cli.py" = ["T201"]
+"src/icespeak/cli.py" = ["FBT001", "FBT002"]
 
 [project.optional-dependencies]
-# Dependencies needed to parse text for more in-depth transcribing
-parsing = ["tokenizer", "reynir", "islenska"]
+cli = ["typer[all]==0.9.0"]
 # Dev dependencies
 dev = [
     "pytest>=7.2.1",
