Fix capitalization in project URL.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,7 +129,7 @@ dev = [
 ]
 
 [project.urls]
-repository = "https://github.com/mideind/icespeak"
+Repository = "https://github.com/mideind/icespeak"
 
 [project.scripts]
 tts = "icespeak.cli:main"
