Added classifiers in pyproject.toml, reordered dependencies list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,18 @@ readme = { file = "README.md", content-type = "text/markdown" }
 license = { file = "LICENSE.txt" }
 # For classifier list see: https://pypi.org/pypi?%3Aaction=list_classifiers
 classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Operating System :: Unix",
+    "Operating System :: POSIX",
+    "Operating System :: Microsoft :: Windows",
     "Natural Language :: Icelandic",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Text Processing :: Linguistic",
     "Topic :: Multimedia :: Sound/Audio :: Speech",
     "Typing :: Typed",
 ]
@@ -16,6 +27,9 @@ requires-python = ">=3.9"
 dependencies = [
     # "aiohttp[speedups]>=3.8.4",
     "requests>=2.31.0",
+    "typing-extensions>=4.7.1",
+    "pydantic-settings>=2.0.3",
+    "cachetools>=5.3.1",
     # Azure TTS
     "azure-cognitiveservices-speech>=1.25.0",
     # Google TTS
@@ -23,9 +37,6 @@ dependencies = [
     # AWS Polly TTS
     "botocore>=1.21.40",
     "boto3>=1.18.40",
-    "typing-extensions>=4.7.1",
-    "pydantic-settings>=2.0.3",
-    "cachetools>=5.3.1",
     # TODO: Make these optional
     "islenska",
     "reynir",
