--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9"] # , "3.10", "3.11", "3.12"
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
@@ -28,26 +28,14 @@ jobs:
           python -m pip install --upgrade pip wheel setuptools
           pip install -e '.[dev]'
       - name: Set up API keys
-        env:
-          ICESPEAK_KEYS_DIR: "keys/"
-          AZURE_TTS_KEY: ${{ secrets.AZURE_TTS_KEY }}
-          AWS_POLLY_KEY: ${{ secrets.AWS_POLLY_KEY }}
-          GOOGLE_TTS_KEY: ${{ secrets.GOOGLE_TTS_KEY }}
         run: |
           # Azure TTS key
-          pwd
-          echo "$AZURE_TTS_KEY" > keys/AzureSpeechServerKey.json
-          cat keys/AzureSpeechServerKey.json
+          echo '${{ secrets.AZURE_TTS_KEY }}' > keys/AzureSpeechServerKey.json
           # AWS Polly API key
-          echo "$AWS_POLLY_KEY" > keys/AWSPollyServerKey.json
+          echo '${{ secrets.AWS_POLLY_KEY }}' > keys/AWSPollyServerKey.json
           # Google TTS key
-          echo "$GOOGLE_TTS_KEY" > keys/GoogleServiceAccount.json
+          echo '${{ secrets.GOOGLE_TTS_KEY }}' > keys/GoogleServiceAccount.json
       - name: Test with pytest
-        env:
-          ICESPEAK_KEYS_DIR: "keys/"
-          AZURE_TTS_KEY: ${{ secrets.AZURE_TTS_KEY }}
-          AWS_POLLY_KEY: ${{ secrets.AWS_POLLY_KEY }}
-          GOOGLE_TTS_KEY: ${{ secrets.GOOGLE_TTS_KEY }}
         run: |
           pytest --run-slow -vvvrP --log-level=DEBUG --capture=tee-sys
       - name: Lint with pre-commit hooks
