--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     # Azure TTS
     "azure-cognitiveservices-speech>=1.25.0",
     # Google TTS
-    "google-cloud-texttospeech>=2.14.0",
+    #"google-cloud-texttospeech>=2.14.0",
     # AWS Polly TTS
     "botocore>=1.21.40",
     "boto3>=1.18.40",
