Properly disabled Google module, renamed command line tool from tts to speak, added TODO list

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
 Repository = "https://github.com/mideind/icespeak"
 
 [project.scripts]
-tts = "icespeak.cli:main"
+speak = "icespeak.cli:main"
 
 [project.optional-dependencies]
 # Needed for CLI interface
