--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,3 +42,26 @@ jobs:
         run: |
           pre-commit run --all-files
 
+  network:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel setuptools
+          pip install -e '.[dev]'
+      - name: Set up API keys
+        run: |
+          # Azure TTS key
+          echo '${{ secrets.AZURE_TTS_KEY }}' > keys/AzureSpeechServerKey.json
+          # AWS Polly API key
+          echo '${{ secrets.AWS_POLLY_KEY }}' > keys/AWSPollyServerKey.json
+          # Google TTS key
+          echo '${{ secrets.GOOGLE_TTS_KEY }}' > keys/GoogleServiceAccount.json
+      - name: Test with pytest
+        run: |
+          pytest --run-all -vvvrP --log-level=DEBUG --capture=tee-sys
