Add support for OpenAI voices.
Note that OpenAI does not support mp4 format, currently set as the
default format. It outputs audio with a sample rate of 24kHz, not 16kHz.
TODO: add option to choose which model is used (currently two
available).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dependencies = [
     # AWS Polly TTS
     "botocore>=1.21.40",
     "boto3>=1.18.40",
+    # OpenAI TTS
+    "openai>=1.44",
 ]
 
 [project.urls]
