--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ dev = [
     "ruff>=0.5.7",
     "pre-commit>=3.3.3",
     "mypy>=1.4.1",
+    "boto3-stubs>=1.35.48",
 ]
 
 # *** Configuration of tools ***
