--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.9", "3.12", "3.13", "pypy-3.10"]
+        python-version: ["3.9", "3.12", "pypy-3.10"]
 
     steps:
       - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install -e '.[dev]'
+          pip install -e '.[dev]' --ignore-requires-python
       - name: Set up API keys
         run: |
           # Azure TTS key
@@ -51,7 +51,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install -e '.[dev]'
+          pip install -e '.[dev]' --ignore-requires-python
       - name: Set up API keys
         run: |
           # Azure TTS key
