Add support for Piper voices
GPU support to be added. STDERR from Piper is suppressed for now.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "boto3>=1.18.40",
     # OpenAI TTS
     "openai>=1.44",
+    # Piper TTS
+    "piper-TTS>=1.2.0",
 ]
 
 [project.urls]
