update pydantic to something which supports from __future__ import annotations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     # "aiohttp[speedups]>=3.8.4",
     "requests>=2.32.3",
     "typing-extensions>=4.12.2",
-    "pydantic==2.3.0",
+    "pydantic>=2.8.0,<3.0.0",
     "pydantic-settings>=2.0.3",
     "cachetools>=5.5.0",
     # For parsing Icelandic text
