--- a/pyproject.toml
+++ b/pyproject.toml
@@ -178,9 +178,6 @@ typehints = ["typing", "typing_extensions", "types", "collections.abc"]
 
 # *** Build system configuration ***
 
-[tool.setuptools_scm]
-fallback_version = "0.0.0"
-
 [build-system]
-requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
+requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
