--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,6 @@ cli = ["typer[all]==0.9.0"]
 dev = [
     "pytest>=7.2.1",
     "coverage[toml]>=7.3.1",
-    "black>=23.7.0",
     "ruff>=0.5.7",
     "pre-commit>=3.3.3",
     "mypy>=1.4.1",
@@ -122,7 +121,6 @@ reportUnnecessaryTypeIgnoreComment = "warning"
 reportUnusedCallResult = "none"
 
 [tool.ruff]
-target-version = "py39"
 line-length = 120
 
 [tool.ruff.lint]
@@ -157,8 +155,9 @@ ignore = [
     "PLW",
     "RET",
     # Keep these ignored (either disagreeable or cause issues)
-    "COM", # Commas (sometimes takes issue with black formatting)
-    "ERA", # Commented out code
+    "COM",   # Commas (sometimes takes issue with black formatting)
+    "ERA",   # Commented out code
+    "TC006", # Quote in cast
 ]
 
 [tool.ruff.lint.isort]
