--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,8 @@ speak = "icespeak.cli:main"
 [project.optional-dependencies]
 # Needed for CLI interface
 cli = ["typer[all]==0.9.0"]
-# Dev dependencies
+
+[dependency-groups]
 dev = [
     "pytest>=7.2.1",
     "coverage[toml]>=7.3.1",
@@ -62,7 +63,6 @@ dev = [
     "mypy>=1.4.1",
     "boto3-stubs>=1.35.48",
 ]
-
 # *** Configuration of tools ***
 
 [tool.pytest.ini_options]
