remove piper tts import and dep, code is still there

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,8 @@ dependencies = [
     "boto3>=1.18.40",
     # OpenAI TTS
     "openai>=1.44",
-    # Piper TTS
-    "piper-TTS>=1.2.0",
+    # Piper TTS - Disabled 16.06.2025 as the library is barly maintained (only 3.10, 3.11)
+    # "piper-TTS>=1.2.0",
 ]
 
 [project.urls]
