Minor cleanup, silenced complaints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -159,6 +159,7 @@ ignore = [
     "ERA",   # Commented out code
     "TC006", # Quote in cast
     "UP007", # require X | Y in type annotation - we support Python 3.9 and for some reason this rule is applied
+    "E731",  # Do not assign a lambda expression, use a def
 ]
 
 [tool.ruff.lint.isort]
